ui_test/parser/fail/example.camp
fn main() -> i32 {
    1 +
}